fix background position mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   background-image: url(./Assets/nicomeli.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 10% 0rem;
+  background-position: -25rem 0rem;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
